# g1-humanoid-robot-multimodal-assistant

./: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  LICENSE  README.md  run_terminal_based_motions.sh  run_voice_based_motions.sh
config/: motions_registry.yaml  project_branding.hpp.in  runtime.env
include/robot/audio/: audio_analyzer.hpp  audio_buffer.hpp  audio_manager.hpp
include/robot/branding/: branding_fingerprint.hpp
include/robot/realtime/: .realtime_openai.hpp.swp  realtime_openai.hpp
motion_data/: military_salute.seq  shake_hands.seq  welcome_visitors.seq
src/: abdullah_elnahrawy_g1_motions.cpp  branding_fingerprint.cpp  g1_motions.cpp  voice_interface.cpp
src/audio/: audio_processing_pipeline.cpp  audio_processing_pipeline.hpp
src/wakeword/: wake_word_gate.cpp  wake_word_gate.hpp
